force-app/main/default/objects/Onboarding_Document_Checklist_Item__c/Onboarding_Document_Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Onboarding Document Checklist Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Document Checklist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>