force-app/main/default/objects/Onboarding_Document_Checklist_Item__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>