force-app/main/default/objects/Onboarding_Document_Checklist_Item__c/fields/Onboarding_Document_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Document_Checklist__c</fullName>
    <label>Onboarding Document Checklist</label>
    <referenceTo>Onboarding_Document_Checklist__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>