force-app/main/default/objects/Onboarding_Document_Checklist_Item__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Checklist Items (Reviewer)</relationshipLabel>
    <relationshipName>Checklist_Items_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>