force-app/main/default/objects/Onboarding_Document_Checklist_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label
        >Not Started</label></value>
            <value><fullName>Pending Review</fullName><default
        >false</default><label>Pending Review</label></value>
            <value><fullName>Approved</fullName><default>false</default><label
        >Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label
        >Rejected</label></value>
            <value><fullName>Expired</fullName><default>false</default><label
        >Expired</label></value>
            <value><fullName>Waived</fullName><default>false</default><label
        >Waived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>